# scala-lite

./: .gitignore  .vscodeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bundle.l10n.json  eslint.config.mjs  package-lock.json  package.json  package.nls.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  native-build.yml  release.yml  rust-ci.yml
native/scala-lite-engine/: Cargo.toml  package.json
native/scala-lite-engine/src/: dep_index.rs  lib.rs
schema/: scala-lite.schema.json
snippets/: scala.json
src/: activationPerformance.ts  budgetCore.ts  buildAdapters.ts  buildCommandExecutor.ts  buildDiagnostics.ts  buildOutputParser.ts  buildToolDetector.ts  buildToolInference.ts  completionFeature.ts  dependencyArtifacts.ts  dependencyQuery.ts  dependencySyncOrchestrator.ts  diagnosticBundle.ts  diagnosticBundleCore.ts  extension.ts  findUsagesFeature.ts  goToDefinitionFeature.ts  hoverInfoFeature.ts  idleCpuAudit.ts  ignoreRules.ts  ignoreRulesCore.ts  jdkResolver.ts  jsStringTable.ts  mavenProvider.ts  memoryBudget.ts  modeManager.ts  modePresentation.ts  nativeEngine.ts  nativeEngineState.ts  profileCore.ts  profileManager.ts  resultBadges.ts  runMainFeature.ts  runMainLogic.ts  runTestFeature.ts  runTestLogic.ts  sbtProvider.ts  scalaLiteCache.ts  scalafixCore.ts  scalafixFeature.ts  (+11 more)
src/test/: bg0002-query-all-entries.test.ts  bg0003-native-memory-reporting.test.ts  dc0002-marketplace-metadata.test.ts  fr0002-modes.test.ts  (+87 more)
syntaxes/: sbt.tmLanguage.json  scala.tmLanguage.json
(+3 files in other folders)
